// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="savings-withdraw-content"
>
  <div
    className="list-body"
  >
    <table
      className="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Request id
          </th>
          <th>
            Amount
          </th>
          <th>
            To
          </th>
          <th>
            Pending
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <ul
    className="mt-4 pagination"
  >
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          className="sr-only"
        >
          First
        </span>
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          className="sr-only"
        >
          Previous
        </span>
      </span>
    </li>
    <li
      className="page-item active"
    >
      <span
        className="page-link"
        disabled={false}
        onClick={[Function]}
      >
        1
        <span
          className="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          className="sr-only"
        >
          Next
        </span>
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          className="sr-only"
        >
          Last
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`(2) Empty list 1`] = `
<div
  className="savings-withdraw-content"
>
  <div
    className="list-body"
  >
    <div
      className="empty-list"
    >
      Nothing here
    </div>
    <table
      className="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Request id
          </th>
          <th>
            Amount
          </th>
          <th>
            To
          </th>
          <th>
            Pending
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <ul
    className="mt-4 pagination"
  >
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          className="sr-only"
        >
          First
        </span>
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          className="sr-only"
        >
          Previous
        </span>
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          className="sr-only"
        >
          Next
        </span>
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
        disabled={true}
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          className="sr-only"
        >
          Last
        </span>
      </span>
    </li>
  </ul>
</div>
`;
